Added extra pages to organize our stuff

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,7 @@
   
 }
 
-#partner-logos{
-  
-  background-color:#ecd9c6;
-}
+
 
 .partner-logos{
     
@@ -45,6 +42,14 @@
 
 }
 
+
+
+about {
+    padding-top: 50px !important;
+}
+
+
+
 #about p{
         margin: 25px 200px 75px 200px;
 }
@@ -74,11 +79,11 @@ p {
 
 
 body {
-    color: rgb(205,166,50);
+    color: black;
 }
 
 body {
-    background-color: ##faf6eb;
+    background-color: beige;
 }
 
 
@@ -86,14 +91,15 @@ body {
 .hover-container {
   position: relative;
   width: 30%;
-  padding-left: 50px;
+  padding-left: 125px;
   padding-bottom: 40px;
 }
 
 .hover-image {
   display: block;
   width: 300px;
-  height: auto;
+  height: 400px;
+  
 
 }
 
@@ -101,7 +107,7 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 50px;
+  left: 125px;
   right: 0;
   height: 92%;
   width: 300px;
@@ -109,10 +115,16 @@ body {
   transition: .5s ease;
   background-color: #d2b48c;
   
+  
+  
 }
 
 .hover-container:hover .overlay {
   opacity: 1;
+}
+
+.footer  {
+    vertical-align: center !important;
 }
 
 .hover-text {
@@ -129,12 +141,7 @@ body {
 }
 
 
-h3 {
-    background-image:url('https://static1.squarespace.com/static/59b9a0848dd04181c47289b3/t/5bd645a1f9619a35268de6fa/1540769189621/Steph+1.jpg"');
-     filter: brightness(50%);
-     height: 500px;   
 
-}
 
 .column {
   float: left;
@@ -162,14 +169,7 @@ h3 {
     user-select: none;
 }
 
-/* Hide the browser's default checkbox */
-.container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
+
 
 /* Create a custom checkbox */
 .checkmark {
@@ -214,4 +214,33 @@ h3 {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+
+
+
+.column-team {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+.row-team::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+body {
+    opacity: 1;
+    transition: 1s opacity;
+}
+.fade-in {
+    opacity: 0;
+    transition: none;
 }
